# streamstack

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
config/: prometheus.yml
docker/: Dockerfile  Dockerfile.locust
grafana/dashboards/: streamstack-dashboard.json
streamstack/: __init__.py  main.py
streamstack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
streamstack/core/: app.py  config.py  logging.py
streamstack/core/routes/: __init__.py  chat.py  health.py  metrics.py
streamstack/observability/: metrics.py  tracing.py
streamstack/providers/: base.py  manager.py  openai_provider.py  vllm_provider.py
streamstack/queue/: manager.py  rate_limiter.py
tests/integration/: test_api.py
tests/load/: locustfile.py
tests/unit/: test_core.py
